--- a/AppwithRedux/server/.env
+++ b/AppwithRedux/server/.env
@@ -2,9 +2,13 @@ PORT=5000
 
 SECRET_KEY=abcdef
 
-CLOUD_NAME=dmjuj6ame
-CLOUD_API_KEY=816155882786996
-CLOUD_API_SECRET= eb9CQFqZA_DCPF88o6BmUDulP20
+# CLOUD_NAME=dmjuj6ame
+# CLOUD_API_KEY=816155882786996
+# CLOUD_API_SECRET= eb9CQFqZA_DCPF88o6BmUDulP20
+
+CLOUD_NAME=dozacgfl7
+CLOUD_API_KEY=688673269932866
+CLOUD_API_SECRET= DSH36C9JeBgCcb_8XbKVnCDtrUg
 
 LOCAL_DB_URL=mongodb://localhost:27017/pawscare
 ATLAS_DB_URL=mongodb+srv://darwish01:darwish01@cluster0.nt4nxtn.mongodb.net/test?retryWrites=true&w=majority
