--- a/AppwithRedux/client/package.json
+++ b/AppwithRedux/client/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
+    "@fortawesome/fontawesome-free": "^6.5.2",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^2.2.1",
@@ -14,15 +16,19 @@
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
+    "boxicons": "^2.1.4",
+    "chart.js": "^3.7.0",
     "crypto-browserify": "^3.12.0",
     "firebase": "^10.7.1",
     "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
+    "react-datepicker": "^6.6.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
     "react-icons": "^5.0.1",
     "react-redux": "^9.0.4",
+    "react-responsive-video": "^1.3.1",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
