--- a/AppwithRedux/server/.env
+++ b/AppwithRedux/server/.env
@@ -13,3 +13,6 @@ CLOUD_API_SECRET= DSH36C9JeBgCcb_8XbKVnCDtrUg
 LOCAL_DB_URL=mongodb://localhost:27017/pawscare
 ATLAS_DB_URL=mongodb+srv://darwish01:darwish01@cluster0.nt4nxtn.mongodb.net/pawscare?retryWrites=true&w=majority
 # mongodb+srv://darwish01:<password>@cluster0.nt4nxtn.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+
+RAZORPAY_KEY_ID=rzp_test_m27EtTBTmvT6GQ
+RAZORPAY_SECRET=kCFTGn3OEIoFNBhZH6chI7tm
