--- a/AppwithRedux/client/package.json
+++ b/AppwithRedux/client/package.json
@@ -21,6 +21,7 @@
     "crypto-browserify": "^3.12.0",
     "firebase": "^10.7.1",
     "formik": "^2.4.5",
+    "razorpay": "^2.9.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
     "react-datepicker": "^6.6.0",
